# Project-Cloud-Computing

./: README.md
.github/workflows/: azure-container-webapp.yml
api/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/app/: router.py
api/app/baskets/: router.py
api/app/baskets/v1/: router.py  service.py
api/app/items/: router.py
api/app/items/v1/: router.py  service.py
api/app/users/: router.py
api/app/users/v1/: router.py  service.py
api/database/scripts/: init.sql
api/database/utils/: db.py
api/tests/: api_is_running.py  test_api_is_running.py
infrastructure/: .terraform.lock.hcl  main.tf  project.tfplan  secrets.tfvars.example  variables.tf
infrastructure/modules/networks/: main.tf  output.tf  variables.tf
infrastructure/modules/postgres-db/: main.tf  output.tf  variables.tf
infrastructure/modules/python-api/: main.tf  variables.tf
infrastructure/postgres-db/: main.tf  variables.tf
infrastructure/python-api/: main.tf  variables.tf
