[tool.poetry]
name = "cloud-computing-api"
version = "0.1.0"
description = ""
authors = ["Louis Lecouturier <71454059+LouisLecouturier@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.4"
httpx = "^0.28.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
